--- a/src/pages/Spooky.css
+++ b/src/pages/Spooky.css
@@ -19,7 +19,7 @@
   left: 0;
   width: 100%;
   height: 20em;
-  background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.8));
+  /* background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.8)); */
 }
 
 #spooky #battle-track {
@@ -46,7 +46,7 @@
   width: 6em;
   height: 6em;
   left: 0;
-  transition: transform 0.2s, opacity 0.2s;
+  transition: transform 0.2s, opacity 0.1s;
   z-index: 6;
 }
 
@@ -56,7 +56,7 @@
 
 #spooky #battle-track svg[hit="true"] {
   transform: scale(1.5);
-  opacity: 0;
+  opacity: 0 !important;
 }
 
 #spooky #battle-track svg[hit="false"] {
