--- a/src/pages/Caseoh.css
+++ b/src/pages/Caseoh.css
@@ -12,8 +12,8 @@
   font-size: 1.7vh;
 }
 
-#caseoh[is-hidden="true"] {
-  display: none;
+*[is-hidden="true"] {
+  display: none !important;
 } 
 
 #caseoh .main {
@@ -75,4 +75,86 @@
 #caseoh .credits p {
   font-weight: 600;
   color: grey;
+}
+
+#caseoh-polaroid-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-end;
+  padding: 4em;
+  pointer-events: none;
+}
+
+#caseoh-polaroid-overlay img.polaroid {
+  height: 15em;
+  width: 13em;
+  transform: rotate(3deg);
+  position: relative;
+}
+
+#caseoh-polaroid-overlay img.background {
+  position: absolute;
+  height: 10em;
+  width: 11em;
+  background-color: rgb(34, 34, 34);
+  bottom: 12.5em;
+  left: 10.8em;
+  transform: rotate(3deg) translate(-50%, 50%);
+  object-fit: cover;
+}
+
+#caseoh-loading {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 4em;
+  background-color: black;
+  font-family: Manrope;
+  text-transform: uppercase;
+  letter-spacing: 0.5em;
+}
+
+#caseoh-loading img {
+  width: 10em;
+  max-width: 80%;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+#caseoh-loading h1 {
+  position: absolute;
+  bottom: 2em;
+  font-size: 2em;
+  animation: fadeInOut 1.5s ease-in-out infinite;
+}
+
+@keyframes fadeInOut {
+  0% {
+    opacity: 0.6;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0.6;
+  }
 }
