--- a/src/pages/Spooky.css
+++ b/src/pages/Spooky.css
@@ -9,7 +9,6 @@
   top: 0;
   left: 0;
   pointer-events: none;
-  padding: 2em;
 }
 
 #spooky::before {
@@ -18,8 +17,9 @@
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 20em;
-  /* background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.8)); */
+  height: 30em;
+  background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.8));
+  pointer-events: none;
 }
 
 #spooky #battle-track {
@@ -28,17 +28,16 @@
   align-items: center;
   margin-top: auto;
   width: 100%;
-  height: 10em;
-  background-color: rgba(34, 29, 34, 0.637);
-  backdrop-filter: blur(0.3em);
-  /* box-shadow: 0 0 2em 0 rgb(0, 0, 0); */
-  border-radius: 0.25em;
+  height: 12em;
+  background-color: rgba(16, 16, 16, 0.94);
+  backdrop-filter: blur(3px);
   position: relative;
   z-index: 5;
-  border: 0.1em solid rgb(77, 77, 77);
   overflow: hidden;
-  padding: 2em;
+  padding: 6em;
   box-sizing: border-box;
+  margin-bottom: 6em;
+  pointer-events: none;
 }
 
 #spooky #battle-track svg {
@@ -50,23 +49,13 @@
   z-index: 6;
 }
 
-#spooky #battle-track svg path {
-  transition: fill 0.2s;
+#spooky #battle-track svg, #spooky #battle-track svg * {
+  transition: fill 0.05s, transform 0.2s, opacity 0.4s;
 }
 
 #spooky #battle-track svg[hit="true"] {
-  transform: scale(1.5);
+  transform: scale(1.3);
   opacity: 0 !important;
-}
-
-#spooky #battle-track svg[hit="false"] {
-  /* transform: scale(0); */
-  opacity: 0;
-}
-
-#spooky #battle-track svg[hit="false"] path {
-  fill: red !important;
-  fill-opacity: 0.3 !important;
 }
 
 #spooky #battle-track #dpad-container {
@@ -76,4 +65,25 @@
   width: 100%;
   height: 100%;
   position: relative;
+  z-index: 10;
+}
+
+#spooky #battle-track svg * {
+  stroke-width: 0;
+  fill: rgba(255, 255, 255, 0.1);
+  fill-opacity: 1.0;
+  opacity: 1.0;
+}
+
+#spooky #battle-track svg[hit="false"], #spooky #battle-track svg[hit="false"] * {
+  fill: red !important;
+  fill-opacity: 0.5 !important;
+  transform: scale(1.0);
+  opacity: 0;
+}
+
+#spooky #battle-track .note, #spooky #battle-track .note * {
+  fill: #151515;
+  stroke: rgba(255, 255, 255, 0.1) !important;
+  stroke-width: 2px !important;
 }
