--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  overflow: hidden;
 }
 
 :root {
@@ -29,7 +30,6 @@
 html, body, #root {
   width: 100%;
   min-height: 100vh;
-  display: flex;
   background-color: #010101;
   color: white;
 }
@@ -42,10 +42,20 @@ html, body, #root {
   font-family: 'FuzzyBubbles', serif;
 }
 
+#root {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  height: 100%;
+}
+
 canvas {
   background-color: black;
-  flex: 1 0;
+  image-rendering: -moz-crisp-edges;
+  image-rendering: crisp-edges;
   image-rendering: pixelated;
-  height: 100vh !important;
-  width: 100vw !important;
+  width: 100% !important;
+  height: 100% !important;
 }
