--- a/src/pages/Caseoh.css
+++ b/src/pages/Caseoh.css
@@ -254,4 +254,35 @@
 .caseoh-camera-hint svg {
   height: 15em;
   transform: translate(-8em, 2em);
+} 
+
+#caseoh-anybutton {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: 5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1em;
+  background-color: black;
+  width: 100%;
+  height: 100%;
+  font-family: Manrope, sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 0.5em;
+  font-size: 1em;
+  animation: fadeTextInOut 3s ease-out infinite;
+}
+
+@keyframes fadeTextInOut {
+  0% {
+    color: white
+  }
+  50% {
+    color: rgba(255,255,255,0.2);
+  }
+  100% {
+    color: white
+  }
 }
