--- a/src/index.css
+++ b/src/index.css
@@ -61,3 +61,13 @@ canvas {
   width: 100% !important;
   height: 100% !important;
 }
+
+#debug {
+  position: absolute;
+  z-index: 5000;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+}
