--- a/src/pages/Caseoh.css
+++ b/src/pages/Caseoh.css
@@ -305,3 +305,23 @@
     color: white
   }
 }
+
+#caseoh-stats {
+  position: absolute;
+  top: 4em;
+  left: 4em;
+  display: flex;
+  /* flex-direction: column; */
+  justify-content: center;
+  align-items: center;
+  gap: 2em;
+}
+
+#caseoh-stats h1 {
+  font-size: 4em;
+}
+
+#caseoh-stats h2 {
+  font-size: 1.2em;
+  opacity: 0.7;
+}
