--- a/src/pages/Caseoh.css
+++ b/src/pages/Caseoh.css
@@ -48,12 +48,17 @@
   transition: --gradient-start-color 0.3s, --gradient-end-color 0.3s,  color 0.3s;
   background: radial-gradient(circle, var(--gradient-start-color), var(--gradient-end-color));
   cursor: pointer;
-  font-family: "Libre Barcode 39 Text", sans-serif;
+  font-family: "Atkinson Hyperlegible", sans-serif;
+  font-weight: 800;
   text-transform: uppercase;
-  font-size: 3em;
-  width: 4em;
-  height: 4em;
-  border-radius: 4em;
+  font-size: 2.2em;
+  width: 6.5em;
+  height: 6.5em;
+  border-radius: 8em;
+}
+
+#caseoh .main button {
+  font-size: 1.5em;
 }
 
 #caseoh .main button:hover, #caseoh-decision .main button:hover {
@@ -324,4 +329,24 @@
 #caseoh-stats h2 {
   font-size: 1.2em;
   opacity: 0.7;
+}
+
+#caseoh-volume-slider {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1em;
+}
+
+#caseoh-volume-slider label {
+  font-size: 1.2em;
+  font-weight: 800;
+  font-family: 'Manrope', sans-serif;
+  letter-spacing: 0.2em;
+  color: white;
+  opacity: 0.7;
+}
+
+#caseoh-volume-slider input {
+  cursor: ew-resize;
 }
