--- a/src/pages/Caseoh.css
+++ b/src/pages/Caseoh.css
@@ -261,7 +261,7 @@
   transition: opacity 0.2s;
   height: 15em;
   width: 35em;
-  font-size: 1.2em;
+  font-size: 0.8em;
 }
 
 .caseoh-camera-hint[is-hinting="false"] {
@@ -313,13 +313,14 @@
 
 #caseoh-stats {
   position: absolute;
-  top: 5em;
-  left: 5em;
+  top: 4em;
+  left: 4em;
   display: flex;
   /* flex-direction: column; */
   justify-content: center;
   align-items: center;
-  gap: 2em;
+  display: none;
+  /* gap: 2em; */
 }
 
 #caseoh-stats h1 {
@@ -327,26 +328,71 @@
 }
 
 #caseoh-stats h2 {
-  font-size: 1.2em;
+  font-size: 1.3em;
   opacity: 0.7;
 }
 
-#caseoh-volume-slider {
+.caseoh-setting {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   gap: 1em;
+  width: 12em;
 }
 
-#caseoh-volume-slider label {
-  font-size: 1.2em;
+.caseoh-setting label {
+  font-size: 0.8em;
   font-weight: 800;
-  font-family: 'Manrope', sans-serif;
-  letter-spacing: 0.2em;
+  font-family: 'Atkinson Hyperlegible', sans-serif;
+  /* letter-spacing: 0.1em; */
   color: white;
   opacity: 0.7;
 }
 
-#caseoh-volume-slider input {
+.caseoh-setting input {
   cursor: ew-resize;
+}
+
+#caseoh-settings {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 1em;
+  padding: 1em;
+  font-size: 1.5em;
+  background-color: black;
+}
+
+#caseoh-settings h1 {
+  font-family: 'Manrope', sans-serif;
+  font-size: 2em;
+  text-transform: uppercase;
+  letter-spacing: 0.5em;
+  margin-bottom: 0.5em;
+  padding-left: 0.5em;
+  display: flex;
+}
+
+.caseoh-settings-indicator {
+  position: absolute;
+  top: 2em;
+  right: 2em;
+  width: 3em;
+  height: 3em;
+  border-radius: 2em;
+  cursor: pointer;
+  background: url("../assets/icons/settings.svg") no-repeat center;
+  background-size: contain;
+  color: white;
+  z-index: 5;
+}
+
+.caseoh-settings-indicator[in-settings="true"] {
+  background: url("../assets/icons/x.svg") no-repeat center;
 }
