--- a/src/pages/Caseoh.css
+++ b/src/pages/Caseoh.css
@@ -40,7 +40,7 @@
   font-size: 2.8em;
 }
 
-#caseoh .main button, #caseoh-decision .main button {
+#caseoh .main button {
   --gradient-start-color: rgba(0, 0, 0, 0.1);
   --gradient-end-color: rgba(109, 109, 109, 0.06);
   border: 1px solid rgba(255, 255, 255, 0.158);
@@ -61,7 +61,7 @@
   font-size: 1.5em;
 }
 
-#caseoh .main button:hover, #caseoh-decision .main button:hover {
+#caseoh .main button:hover {
   --gradient-start-color: white;
   --gradient-end-color: white;
   color: black;
@@ -215,6 +215,7 @@
   display: flex;
   gap: 2em;
   position: relative;
+  flex-direction: column;
 }
 
 #caseoh-decision .caseoh-polaroid-overlay {
@@ -395,4 +396,39 @@
 
 .caseoh-settings-indicator[in-settings="true"] {
   background: url("../assets/icons/x.svg") no-repeat center;
+}
+
+#caseoh-decision .main button {
+  outline: none;
+  border: 1px solid rgba(255, 255, 255, 0.192);
+  color: white;
+  background-color: transparent;
+  padding: 1.2em;
+  text-transform: uppercase;
+  font-family: Atkinson Hyperlegible;
+  font-weight: 600;
+  font-size: 2em;
+  width: 20em;
+  text-align: left;
+  transition: background-color 0.1s, color 0.1s, border-color 0.1s;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  /* justify-content: space-between; */
+  gap: 1em;
+  box-sizing: border-box;
+}
+
+#caseoh-decision .main button:hover {
+  background-color: white;
+  color: black;
+  border-color: white;
+
+  /* background-color: rgba(255, 255, 255, 0.15); */
+}
+
+#caseoh-decision .cancel-arrow {
+  font-family: monospace;
+  transform: scale(1.4) translateX(0.08em);
+  display: inline-block;
 }
