--- a/src/index.css
+++ b/src/index.css
@@ -26,12 +26,12 @@
 :root {
   font-size: calc(0.5vw + 0.7vh);
   font-family: 'Atkinson Hyperlegible', sans-serif;
+  background-color: #010101;
 }
 
 html, body, #root {
   width: 100%;
   min-height: 100vh;
-  background-color: #010101;
   color: white;
   overflow: hidden;
 }
@@ -46,9 +46,9 @@ html, body, #root {
 
 #root {
   position: absolute;
-  top: 50%;
+  /* top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%); */
   width: 100%;
   height: 100%;
 }
