--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,4 +1,131 @@
+@import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sedgwick+Ave+Display&display=swap');
+
+/* Works on Firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: white #000000;
+}
+
+:root {
+  font-size: 2vh;
+}
+
+:root, body, #root {
+  overflow-y: auto;
+}
+
+h1, h2 {
+  font-family: 'Sedgwick Ave Display', cursive;
+  letter-spacing: 0.1em;
+  background-color: black;
+  padding: 1rem 1.5rem;
+  padding-top: calc(1rem + 0.3em);
+}
+
+p {
+  max-width: 40em;
+  background-color: black;
+  padding: 2.3rem;
+  line-height: 1.5em;
+  letter-spacing: 0.02em;
+}
+
 #home-background {
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
-  height: 100vh;
+  height: 100%;
+  z-index: -5;
+  /* filter: contrast(1.5); */
+}
+
+#home .main {
+  width: 100%;
+  position: relative;
+  z-index: 5;
+  /* background-color: #140606d3; */
+  background: url("../assets/icons/dot.png") repeat;
+  background-size: 4px;
+  background-attachment: fixed;
+  image-rendering: pixelated;
+}
+
+#home .main > *:not(:first-child) {
+  /* background-color: rgba(255, 255, 255, 0.075); */
+  padding: 5em;
+}
+
+#home .main div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
+
+#home .landing {
+  width: 100%;
+  height: 30em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+#home .landing svg {
+  width: 40em;
+  position: relative;
+  /* animation: scaleUp 0.3s ease-out 1, upDown 3s ease-in-out 0.3s infinite; */
+  transform: rotate(-5deg);
+}
+
+@keyframes scaleUp {
+  0% {
+  transform: scale(0.1) rotate(-2deg);
+  }
+  70% {
+  transform: scale(1.2) rotate(-2deg);
+  }
+
+  100% {
+  transform: scale(1) rotate(-2deg);
+  }
+}
+
+@keyframes upDown {
+  0% {
+    transform: scale(1) rotate(-2deg);
+  }
+  50% {
+    transform: scale(1.05) rotate(-2deg);
+  }
+  100% {
+    transform: scale(1) rotate(-2deg);
+  }
+}
+
+/* #home .landing::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: radial-gradient(circle at center, rgba(255, 255, 255, 0.05), rgba(255, 255, 255, 0) 15em);
+  transform: scalex(2);
+  z-index: -1
+} */
+
+#home .landing::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  /* border-bottom: 2px solid #FF4D4D; */
+  box-sizing: border-box;
+  /* box-shadow: inset 0vw -8vw 10vw -10vw #ff0000; */
 }
