--- a/src/pages/Caseoh.css
+++ b/src/pages/Caseoh.css
@@ -353,9 +353,17 @@
   left: 4em;
   display: flex;
   /* flex-direction: column; */
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
-  /* gap: 2em; */
+  width: 100%;
+  pointer-events: none;
+  gap: 1em;
+  color: rgb(255, 255, 255);
+  opacity: 0.7;
+}
+
+#caseoh-stats svg {
+  width: 2em;
 }
 
 #caseoh-stats h1 {
@@ -364,7 +372,7 @@
 
 #caseoh-stats h2 {
   font-size: 1.4em;
-  opacity: 0.7;
+  opacity: 1.0;
 }
 
 .caseoh-setting {
@@ -372,7 +380,8 @@
   justify-content: space-between;
   align-items: center;
   gap: 1em;
-  width: 12em;
+  width: 30em;
+  max-width: 80vw;
 }
 
 .caseoh-setting label {
@@ -481,5 +490,5 @@
   z-index: 10;
   bottom: 2rem;
   right: 4rem;
-  width: 15rem;
+  width: 12rem;
 }
