--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -24,7 +24,7 @@
   overflow-y: auto;
 }
 
-h1, h2 {
+#home h1, #home h2 {
   font-family: 'Sedgwick Ave Display', cursive;
   letter-spacing: 0.1em;
   background-color: black;
