--- a/src/pages/Caseoh.css
+++ b/src/pages/Caseoh.css
@@ -211,7 +211,7 @@
 }
 
 #caseoh-decision {
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0.85);
   z-index: 10;
   font-size: 0.8em;
   display: flex;
@@ -410,7 +410,7 @@
   gap: 1em;
   padding: 1em;
   font-size: 1.5em;
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0.85);
   z-index: 1000;
 }
 
@@ -422,6 +422,75 @@
   margin-bottom: 0.5em;
   padding-left: 0.5em;
   display: flex;
+}
+
+#caseoh-settings button {
+  border: 1px solid rgb(36, 36, 36);
+  font-family: inherit;
+  font-weight: 800;
+  font-size: 0.9em;
+  text-transform: uppercase;
+  padding: 0.75em;
+  cursor: pointer;
+  background-color: transparent;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5em;
+  margin-top: 2em;
+}
+
+#caseoh-settings button svg {
+  height: 1em;
+}
+
+#caseoh-settings button:hover {
+  background-color: white;
+  color: black;
+}
+
+#caseoh-settings .are-you-sure {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 0.5em;
+  padding: 1em;
+  font-size: 1.5em;
+  background-color: black;
+}
+
+#caseoh-settings .are-you-sure h2 {
+  font-size: 1em;
+  /* font-family: HellsCemetery-Regular; */
+}
+
+#caseoh-settings .are-you-sure h3 {
+  font-size: 0.5em;
+  color: rgb(128, 128, 128);
+  font-family: HellsCemetery-Regular;
+}
+
+#caseoh-settings .are-you-sure div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* flex-direction: column; */
+  gap: 0.5em;
+  width: 30em;
+  margin-top: 1em;
+}
+
+#caseoh-settings .are-you-sure div button {
+  font-size: 0.7em;
+  margin-top: 0em;
+  width: 5em;
 }
 
 .caseoh-settings-indicator {
