--- a/src/pages/Caseoh.css
+++ b/src/pages/Caseoh.css
@@ -445,7 +445,7 @@
   height: 1em;
 }
 
-#caseoh-settings button:hover {
+#caseoh-settings button:hover, #caseoh-settings button:focus {
   background-color: white;
   color: black;
 }
@@ -532,7 +532,7 @@
   box-sizing: border-box;
 }
 
-#caseoh-decision .main button:hover {
+#caseoh-decision .main button:hover, #caseoh-decision .main button:focus {
   background-color: white;
   color: black;
   border-color: white;
