feat: rc1 sub-scene format & spooky battle test

--- a/src/pages/Spooky.css
+++ b/src/pages/Spooky.css
@@ -87,3 +87,50 @@
   stroke: rgba(255, 255, 255, 0.1) !important;
   stroke-width: 2px !important;
 }
+
+*[is-hidden="true"] {
+  display: none !important;
+}
+
+#spooky .temp-activate {
+  position: absolute;
+  top: 1em;
+  right: 1em;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.2s;
+  transform: scale(1.0);
+  transform-origin: right center;
+  opacity: 1;
+}
+
+#spooky .temp-activate[is-hidden="true"] {
+  display: flex !important;
+  opacity: 0 !important;
+  pointer-events: none !important;
+  transform: scale(1.15) !important;
+}
+
+#spooky #battle-track {
+  transition: all 0.2s;
+  transform: scale(1.0);
+  opacity: 1;
+}
+
+#spooky #battle-track[is-hidden="true"] {
+  display: flex !important;
+  opacity: 0 !important;
+  pointer-events: none !important;
+  transform: scale(1.15) !important;
+}
+
+#spooky .temp-activate p {
+  font-size: 1.75em;
+  color: #fff;
+}
+
+#spooky .temp-activate svg {
+  width: 7em
+}
