--- a/src/pages/Spooky.css
+++ b/src/pages/Spooky.css
@@ -113,6 +113,37 @@
   transform: scale(1.15) !important;
 }
 
+@keyframes loading {
+  0% {
+    transform: scale(1.0);
+    opacity: 1;
+  }
+  50% {
+    transform: scale(1.2);
+    opacity: 0.5;
+  }
+  100% {
+    transform: scale(1.0);
+    opacity: 1;
+  }
+}
+
+#spooky .temp-loading {
+  position: absolute;
+  top: 3.4em;
+  right: 3em;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  animation: loading 2s infinite;
+}
+
+#spooky .temp-loading p {
+  font-size: 1.75em;
+  color: #fff;
+}
+
 #spooky #battle-track {
   transition: all 0.2s;
   transform: scale(1.0);
