--- a/src/pages/Caseoh.css
+++ b/src/pages/Caseoh.css
@@ -82,7 +82,7 @@
   gap: 0.5em;
   display: flex;
   flex-direction: column;
-  font-size: 0.9em;
+  font-size: 0.9rem;
   z-index: 5;
   user-select: text;
   pointer-events: all;
@@ -556,7 +556,7 @@
   transform: translate(-50%, -50%);
 }
 
-#caseoh .tripshred, #caseoh-thankyou .tripshred {
+.caseoh-tripshred {
   position: absolute;
   z-index: 10;
   bottom: 2rem;
